# mesh-api-specification

./: .flake8  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  Makefile  README.md  azure-pipelines.yml  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.dependabot/: config.yml
.github/: CODEOWNERS  CODEOWNERS_WHITELIST  OWNERS  dependabot.yml
.github/workflows/: continous-integration-workflow.yaml  dependabot-auto-merge.yaml  pr-lint.yaml  scheduled-combine-dependabot-prs.yaml
apiproxy/: hello-world-v1.xml
apiproxy/policies/: AssignMessage-AddCorsHeaders.xml  AssignMessage-RemoveApiKeyHeader.xml  AssignMessage-RemoveAuthorizationHeader.xml  Oauth-VerifyAccessToken.xml  VerifyApiKey-Header.xml
apiproxy/proxies/: default.xml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
docker/hello-world-api-sandbox/: Dockerfile  README.md  package.json
docker/hello-world-api-sandbox/src/: config.json
docker/hello-world-sandbox/: Dockerfile  Makefile  package-lock.json
docker/hello-world-sandbox/src/: app.js
docker/hello-world-sandbox/src/routes/: get-status.js  hello-application.js  hello-user.js  hello-world.js  index.js
docker/jwk-verifier/: Dockerfile  Makefile  index.js  package-lock.json  package.json
docker/mesh-api/: Makefile
docker/mesh-api-sandbox/: package.json
proxies/live/apiproxy/policies/: Oauth-VerifyAccessToken.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: apim.xml  live.xml  sandbox.xml
proxies/sandbox/: Makefile
proxies/sandbox/apiproxy/: mesh-api-v1.xml
proxies/sandbox/apiproxy/policies/: AssingMessage.AddVersionToPing.xml
proxies/sandbox/apiproxy/proxies/: default.xml
sandbox/: README.md  app.js  config.json  package-lock.json  package.json
sandbox/mock/: ping.json
scripts/: build_proxy.sh  calculate_version.py  deploy_spec.sh  generate_examples.py  nhs_number_utils.py  pre-commit  set_version.py  tag-versions.sh  template.py  test_nhs_number_utils.py  yaml2json.py
specification/: hello-world-api.yaml  hello-world.yaml  mesh-api.yaml
specification/components/schemas/: Greeting.yaml
terraform/: main.tf  variables.tf
tests/: .gitignore  package-lock.json  package.json
tests/e2e/: globals.js  globals.json  hello-world-api-sandbox.json  hello-world-sandbox.json  hello-world-sandbox.postman.json  hello-world.collection.json  local.globals.json  test-runner.js
tests/e2e/environments/: hello-world-sandbox.postman.json  internal-dev.postman.json  internal-qa-sandbox.postman.json  local.postman.json  local.postman_environment.json  postman_environment.json.template
