[project]
name="mesh_api_specification"
python = "^3.8"


[tool.poetry]
name = "mesh-api-specification"
version = "0.0.1-alpha"
description = "MESH Api specification repo"

license = "MIT"

authors = [
    "NHS England"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/mesh-api-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/message-exchange-for-social-care-and-health-api"

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.1"
gitpython = "^3.1.41"


[tool.poetry.dev-dependencies]
ruff = "^0.5.0"
black = "^24.4.2"
pip-licenses = "^4.3.3"
jinja2 = "^3.1.4"


[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
#extend-exclude = '''
#/(
#  # The following are specific to Black, you probably don't want those.
#  | blib2to3
#  | tests/data
#  | profiling
#)/
#'''

[tool.ruff]
select = [
    # See https://beta.ruff.rs/docs/rules/ for a full list
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q", # flake8-quotes
    "YTT", # flake8-2020
    "RSE", # flake8-raise
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "EXE", # flake8-executable
    "A", # flake8-builtins
    "UP",  # pyupgrade
    "PT", # flake8-pytest-style
    "PERF", # Perflint #
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
src = ["."]
ignore = []
exclude = [
    ".git",
    ".venv",
]
unfixable = []
line-length = 120
target-version = "py38"

[tool.ruff.per-file-ignores]