[project]
name="mesh_api_specification"
python = "^3.14.0"


[tool.poetry]
name = "mesh-api-specification"
version = "0.0.1-alpha"
description = "MESH Api specification repo"

license = "MIT"

authors = [
    "NHS England"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/mesh-api-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/message-exchange-for-social-care-and-health-api"

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.14.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.46"


[tool.poetry.dev-dependencies]
ruff = "^0.14.14"
black = "^26.3.1"
pip-licenses = "^4.3.3"
jinja2 = "^3.1.6"
pytest = "^9.0.2"


[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
#extend-exclude = '''
#/(
#  # The following are specific to Black, you probably don't want those.
#  | blib2to3
#  | tests/data
#  | profiling
#)/
#'''

[tool.ruff]
src = ["."]
exclude = [
    ".git",
    ".venv",
]
line-length = 120
target-version = "py314"


[tool.ruff.lint]
select = [
    # See https://beta.ruff.rs/docs/rules/ for a full list
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q", # flake8-quotes
    "YTT", # flake8-2020
    "RSE", # flake8-raise
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "EXE", # flake8-executable
    "A", # flake8-builtins
    "UP",  # pyupgrade
    "PT", # flake8-pytest-style
    "PERF", # Perflint #
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
ignore = []
unfixable = []
per-file-ignores = {}
