[project]
name = "mesh-api-specification"
version = "0.0.1-alpha"
description = "MESH Api specification repo"
readme = "README.md"
license = "MIT"
authors = [
    { name = "NHS England" }
]
keywords = ["healthcare", "uk", "nhs"]
requires-python = ">=3.13,<4.0"
dependencies = [
    "docopt>=0.6.2,<0.7.0",
    "jsonpath-rw>=1.4.0,<2.0.0",
    "semver>=3.0.4,<4.0.0",
    "gitpython>=3.1.49,<4.0.0",
]

[project.urls]
Homepage = "https://digital.nhs.uk/developer/api-catalogue/message-exchange-for-social-care-and-health-api"
Repository = "https://github.com/NHSDigital/mesh-api-api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.11"
black = "^26.0.0"
pip-licenses = "^5.5.5"
jinja2 = "^3.1.6"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
#extend-exclude = '''
#/(
#  # The following are specific to Black, you probably don't want those.
#  | blib2to3
#  | tests/data
#  | profiling
#)/
#'''

[tool.ruff]
src = ["."]
exclude = [
    ".git",
    ".venv",
]
line-length = 120
target-version = "py313"


[tool.ruff.lint]
select = [
    # See https://beta.ruff.rs/docs/rules/ for a full list
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q", # flake8-quotes
    "YTT", # flake8-2020
    "RSE", # flake8-raise
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "EXE", # flake8-executable
    "A", # flake8-builtins
    "UP",  # pyupgrade
    "PT", # flake8-pytest-style
    "PERF", # Perflint #
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
ignore = []
unfixable = []
per-file-ignores = {}
